altered some stuff

--- a/microsite/contact/index.html
+++ b/microsite/contact/index.html
@@ -19,8 +19,8 @@
         <link rel=stylesheet href=../plugins/aos/aos.css>
     </noscript>
     <link rel=stylesheet href=../scss/style.min.f61d3bee22d1bf5dc4569e6a8c698de9be0412a5fb61c9c9f3c07a371838f9f1.css>
-    <link rel="shortcut icon" href=../images/favicon.png type=image/x-icon>
-    <link rel=icon href=../images/favicon.png type=image/x-icon>
+    <link rel="shortcut icon" href=../images/favicon.ico type=image/x-icon>
+    <link rel=icon href=../images/favicon.ico type=image/x-icon>
 </head>
 
 <body class=body-wrapper>
