--- a/microsite/index.html
+++ b/microsite/index.html
@@ -19,8 +19,8 @@
         <link rel=stylesheet href=plugins/aos/aos.css>
     </noscript>
     <link rel=stylesheet href=scss/style.min.f61d3bee22d1bf5dc4569e6a8c698de9be0412a5fb61c9c9f3c07a371838f9f1.css>
-    <link rel="shortcut icon" href=images/favicon.png type=image/x-icon>
-    <link rel=icon href=images/favicon.png type=image/x-icon>
+    <link rel="shortcut icon" href=images/favicon.ico type=image/x-icon>
+    <link rel=icon href=images/favicon.ico type=image/x-icon>
 </head>
 
 <body class=body-wrapper>
@@ -130,26 +130,26 @@
                         <div class="row align-items-center">
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-ribbon></i>
-                                    <h3>Monitorização Fácil</h3>
-                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+                                    <h3>Simple monitoring</h3>
+                                    <p></p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-puzzle></i>
-                                    <h3>Sensor Bridge</h3>
-                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+                                    <h3>Sensor Mobility</h3>
+                                    <p></p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-bargraph></i>
-                                    <h3>Strategist</h3>
-                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+                                    <h3>Environmental control</h3>
+                                    <p></p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-adjustments></i>
-                                    <h3>Art Direction</h3>
-                                    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Curabitur aliquet quam id dui</p>
+                                    <h3>Community driven</h3>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
