--- a/microsite/index.html
+++ b/microsite/index.html
@@ -71,8 +71,11 @@
                 </div>
                 <div class="col-lg-6 mr-auto align-self-center">
                     <div class=feature-content>
-                        <h2>Increase your productivity with Small Apps</h2>
-                        <p class=desc>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h2>Discover Environment</h2>
+                        <p class=desc>CityZoom is a platform that aims at sharing information on environmental aspects about cities with everyone.
+                            You can learn about your city's temperature and quality of atmosphere, know if the city is becoming more eco-friendly
+                            and even compare it with others!
+                        </p>
                     </div>
                     <!--
                     <div class=testimonial>
@@ -116,8 +119,8 @@
             <div class=row>
                 <div class=col-lg-12>
                     <div class=section-title>
-                        <h2>An Interface For Lifestyle</h2>
-                        <p>Small Apps makes it easy to stay on top of your Life Style. No late tasks. No gimmicks.</p>
+                        <h2>Know Your City</h2>
+                        <p>Know everything you need to know about your city with us.</p>
                     </div>
                 </div>
             </div>
@@ -131,25 +134,25 @@
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-ribbon></i>
                                     <h3>Simple monitoring</h3>
-                                    <p></p>
+                                    <p>Use our dashboard to quickly get filled in on everything you need to know about your city's well being!</p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-puzzle></i>
                                     <h3>Sensor Mobility</h3>
-                                    <p></p>
+                                    <p>Know not only how your city is doing but also others and compare them!</p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-bargraph></i>
                                     <h3>Environmental control</h3>
-                                    <p></p>
+                                    <p>Check how eco-friendly your city really is and how much that may be having an impact in your life!</p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-adjustments></i>
                                     <h3>Community driven</h3>
-                                    <p></p>
+                                    <p>Help us figure out what's happening in your city by sharing data to us and everyone else!</p>
                                 </div>
                             </div>
                         </div>
