--- a/microsite/faq/index.html
+++ b/microsite/faq/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset=utf-8>
-    <title>CityZoom</title>
+    <title>Personas & Scenarios</title>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
     <meta name=description content="this is meta description">
@@ -42,7 +42,7 @@
                         <li class=nav-item><a class=nav-link href=../team/index.html>Team</a></li>
                         <li class="nav-item dropdown dropdown-slide"><a class=nav-link href=# data-toggle=dropdown>Documentation
     <span><i class=tf-ion-ios-arrow-down></i></span></a>
-                            <div class=dropdown-menu><a class=dropdown-item href=index.html>Personas</a>
+                            <div class=dropdown-menu><a class=dropdown-item href=index.html>Personas & Scenarios</a>
                                 <a class=dropdown-item href=../images/architecture/cityzoom_architecture.png>Architecture</a></div>
                         </li>
                     </ul>
@@ -68,7 +68,7 @@
                     <div class="block shadow">
                         <div class=faq-item>
                             <div class=faq-item-title>
-                                <h2>Personas</h2></div>
+                                <h2>Personas & Scenarios</h2></div>
                             <div id=accordions1 data-children=.item>
                                 <div class=item>
                                     <div class=item-link><a data-toggle=collapse data-parent=#accordions1 href=#accordion12>Filipe Alves da Rocha</a></div>
