--- a/microsite/index.html
+++ b/microsite/index.html
@@ -42,8 +42,11 @@
                     <li class=nav-item><a class=nav-link href=team/index.html>Team</a></li>
                     <li class="nav-item dropdown dropdown-slide"><a class=nav-link href=# data-toggle=dropdown>Documentation
 <span><i class=tf-ion-ios-arrow-down></i></span></a>
-                        <div class=dropdown-menu><a class=dropdown-item href=faq/index.html>Personas</a>
-                            <a class=dropdown-item href=images/architecture/cityzoom_architecture.png>Architecture</a></div>
+                        <div class=dropdown-menu>
+                            <a class=dropdown-item href=faq/index.html>Personas & Scenarios</a>
+                            <a class=dropdown-item href=images/architecture/cityzoom_architecture.png>Architecture</a>
+                            <a class=dropdown-item href=faq/logbook.html>LogBook</a>
+                        </div>
                     </li>
                 </ul>
             </div>
