--- a/microsite/team/index.html
+++ b/microsite/team/index.html
@@ -42,7 +42,7 @@
                         <li class=nav-item><a class=nav-link href=index.html>Team</a></li>
                         <li class="nav-item dropdown dropdown-slide"><a class=nav-link href=# data-toggle=dropdown>Documentation
     <span><i class=tf-ion-ios-arrow-down></i></span></a>
-                            <div class=dropdown-menu><a class=dropdown-item href=../faq/index.html>Personas</a>
+                            <div class=dropdown-menu><a class=dropdown-item href=../faq/index.html>Personas & Scenarios</a>
                                 <a class=dropdown-item href=../images/architecture/cityzoom_architecture.png>Architecture</a></div>
                         </li>
                     </ul>
