--- a/microsite/faq/logbook.html
+++ b/microsite/faq/logbook.html
@@ -44,7 +44,7 @@
     <span><i class=tf-ion-ios-arrow-down></i></span></a>
                         <div class=dropdown-menu>
                             <a class=dropdown-item href=index.html>Personas & Scenarios</a>
-                            <a class=dropdown-item href=../images/architecture/cityzoom_architecture.png>Architecture</a>
+                            <a class=dropdown-item href=../architecture/architecture.html>Architecture</a>
                             <a class=dropdown-item href=logbook.html>LogBook</a>
                         </div>
                         </li>
