--- a/microsite/team/index.html
+++ b/microsite/team/index.html
@@ -43,7 +43,7 @@
                         <li class="nav-item dropdown dropdown-slide"><a class=nav-link href=# data-toggle=dropdown>Documentation
     <span><i class=tf-ion-ios-arrow-down></i></span></a>
                             <div class=dropdown-menu><a class=dropdown-item href=../faq/index.html>Personas & Scenarios</a>
-                                <a class=dropdown-item href=../images/architecture/cityzoom_architecture.png>Architecture</a></div>
+                                <a class=dropdown-item href=../architecture/architecture.html>Architecture</a></div>
                         </li>
                     </ul>
                 </div>
