Added mentors section in team

--- a/microsite/team/index.html
+++ b/microsite/team/index.html
@@ -188,6 +188,51 @@
             </div>
         </div>
     </section>
+    <section class="section page-title">
+        <div class=container>
+            <div class=row>
+                <div class="col-sm-8 m-auto">
+                    <h2>Mentors</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="design-team section pt-0">
+        <div class=container>
+            <div class=row>
+                <div class="col-lg-4 col-md-6">
+                    <div class=team-sm>
+                        <div class=image><img class=img-fluid src=../images/team/susana_sargento_foto.jpg onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/team\/marketing-team-01.jpg'" alt=member-image>
+                            <div class=social-links>
+                                <ul class=list-inline>
+                                    <li class=list-inline-item><a href=#><i class=tf-ion-social-facebook></i></a></li>
+                                    <li class=list-inline-item><a href=#><i class=tf-ion-social-twitter></i></a></li>
+                                    <li class=list-inline-item><a href=#><i class=tf-ion-social-instagram></i></a></li>
+                                    <li class=list-inline-item><a href=#><i class=tf-ion-social-dribbble></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h3>Susana Sargento</h3><cite></cite>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class=team-sm>
+                        <div class=image><img class=img-fluid src=../images/team/ilidio_oliveira_foto.jpg onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/team\/marketing-team-02.jpg'" alt=member-image>
+                            <div class=social-links>
+                                <ul class=list-inline>
+                                    <li class=list-inline-item><a href=#><i class=tf-ion-social-facebook></i></a></li>
+                                    <li class=list-inline-item><a href=#><i class=tf-ion-social-twitter></i></a></li>
+                                    <li class=list-inline-item><a href=#><i class=tf-ion-social-instagram></i></a></li>
+                                    <li class=list-inline-item><a href=#><i class=tf-ion-social-dribbble></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h3>Ilidio Oliveira</h3><cite></cite>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="section cta-hire bg-gary">
         <div class=container>
             <div class=row>
