--- a/microsite/architecture/architecture.html
+++ b/microsite/architecture/architecture.html
@@ -43,8 +43,8 @@
                         <li class="nav-item dropdown dropdown-slide"><a class=nav-link href=# data-toggle=dropdown>Documentation
                         <span><i class=tf-ion-ios-arrow-down></i></span></a>
                         <div class=dropdown-menu>
-                            <a class=dropdown-item href=index.html>Personas & Scenarios</a>
-                            <a class=dropdown-item href=../images/architecture/cityzoom_architecture.png>Architecture</a>
+                            <a class=dropdown-item href=../faq/index.html>Personas & Scenarios</a>
+                            <a class=dropdown-item href=#>Architecture</a>
                             <a class=dropdown-item href=../faq/logbook.html>LogBook</a>
                         </div>
                         </li>
@@ -106,7 +106,7 @@
                                     <li class="list-inline-item mx-3"><a class=text-white href=../index.html>Home</a></li>
                                     <li class="list-inline-item mx-3"><a class=text-white href=../team/index.html>Team</a></li>
                             </ul>
-                            <a href=index.html><img src=../images/logo.png alt=footer-logo width="200" height="80"></a>
+                            <a href="../index.html"><img src=../images/logo.png alt=footer-logo width="200" height="80"></a>
                             <ul class="social-icon list-inline">
                                 <li class=list-inline-item><a href=#><i class=tf-ion-social-facebook></i></a></li>
                                 <li class=list-inline-item><a href=#><i class=tf-ion-social-twitter></i></a></li>
