Fixed links in index

--- a/microsite/index.html
+++ b/microsite/index.html
@@ -44,7 +44,7 @@
 <span><i class=tf-ion-ios-arrow-down></i></span></a>
                         <div class=dropdown-menu>
                             <a class=dropdown-item href=faq/index.html>Personas & Scenarios</a>
-                            <a class=dropdown-item href=images/architecture/cityzoom_architecture.png>Architecture</a>
+                            <a class=dropdown-item href=architecture/architecture.html>Architecture</a>
                             <a class=dropdown-item href=faq/logbook.html>LogBook</a>
                         </div>
                     </li>
@@ -56,11 +56,11 @@
         <div class=container-fluid>
             <div class="row align-items-center">
                 <div class="col-lg-6 offset-lg-1 mb-5 text-center text-lg-left">
-                    <h1 class="text-white mb-4">Monitor your city<br>Together</h1>
+                    <h1 class="text-white mb-4">Monitor your city</br> in real time</h1>
                     <!--
                     <p class="text-white mb-4">Cupidatat non proident sunt culpa qui officia deserunt mollit
                         <br>anim idest laborum sed ut perspiciatis.</p>
-                    --><a href=# class="btn font-weight-bold btn-main-md">Open Web App</a></div>
+                    --><a href="faq/index.html" class="btn font-weight-bold btn-main-md">Who is this meant for?</a></div>
                 <div class="offset-lg-1 col-lg-4 text-center text-lg-left"><img src=images/home-banner-illustration.webp onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/home-banner-illustration.png'" class=img-fluid alt=banner-image></div>
             </div>
         </div>
