Fixed links in Team

--- a/microsite/team/index.html
+++ b/microsite/team/index.html
@@ -27,7 +27,7 @@
     <div class=preloader></div>
     <nav class="navbar main-nav navbar-expand-lg p-0">
             <div class=container>
-                <a class=navbar-brand href=index.html><img src=../images/logo.png alt=logo width="200" height="80"></a>
+                <a class=navbar-brand href=../index.html><img src=../images/logo.png alt=logo width="200" height="80"></a>
                 <button class=navbar-toggler type=button data-toggle=collapse data-target=#navbarNav aria-controls=navbarNav aria-expanded=false aria-label="Toggle navigation">
                     <span class=tf-ion-android-menu></span></button>
                 <div class="collapse navbar-collapse" id=navbarNav>
@@ -253,7 +253,7 @@
                                     <li class="list-inline-item mx-3"><a class=text-white href=../index.html>Home</a></li>
                                     <li class="list-inline-item mx-3"><a class=text-white href=../team/index.html>Team</a></li>
                             </ul>
-                            <a href=index.html><img src=../images/logo.png alt=footer-logo width="200" height="80"></a>
+                            <a href=../index.html><img src=../images/logo.png alt=footer-logo width="200" height="80"></a>
                             <ul class="social-icon list-inline">
                                 <li class=list-inline-item><a href=#><i class=tf-ion-social-facebook></i></a></li>
                                 <li class=list-inline-item><a href=#><i class=tf-ion-social-twitter></i></a></li>
