--- a/microsite/faq/logbook.html
+++ b/microsite/faq/logbook.html
@@ -46,6 +46,7 @@
                             <a class=dropdown-item href=index.html>Personas & Scenarios</a>
                             <a class=dropdown-item href=../architecture/architecture.html>Architecture</a>
                             <a class=dropdown-item href=logbook.html>LogBook</a>
+                            <a class=dropdown-item href=../architecture/usermanual.pdf>User Manual</a>
                         </div>
                         </li>
                     </ul>
@@ -130,6 +131,19 @@
                                 </span>
                             </div>
                         </div>
+                        <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Time Spent Sheet</h2>
+                            </div>
+                            <div>
+                                <span>
+                                    <iframe width="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRU3ksuTtFrkjzTgqtPkuYOBt1NT7J-JXoGgOpl8gmw-HBZBl6T3h9wV82dz3GJuFZpEZHRoYQ6bliG/pubhtml?gid=1077352001&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                                    <p></p>
+                                </span>
+                            </div>
+                        </div>
+
+                        
                     </div>
                 </div>
             </div>
