--- a/microsite/architecture/architecture.html
+++ b/microsite/architecture/architecture.html
@@ -44,8 +44,9 @@
                         <span><i class=tf-ion-ios-arrow-down></i></span></a>
                         <div class=dropdown-menu>
                             <a class=dropdown-item href=../faq/index.html>Personas & Scenarios</a>
-                            <a class=dropdown-item href=#>Architecture</a>
+                            <a class=dropdown-item href=architecture.html>Architecture</a>
                             <a class=dropdown-item href=../faq/logbook.html>LogBook</a>
+                            <a class=dropdown-item href=usermanual.pdf>User Manual</a>
                         </div>
                         </li>
                     </ul>
