--- a/microsite/index.html
+++ b/microsite/index.html
@@ -46,6 +46,7 @@
                             <a class=dropdown-item href=faq/index.html>Personas & Scenarios</a>
                             <a class=dropdown-item href=architecture/architecture.html>Architecture</a>
                             <a class=dropdown-item href=faq/logbook.html>LogBook</a>
+                            <a class=dropdown-item href=architecture/usermanual.pdf>User Manual</a>
                         </div>
                     </li>
                 </ul>
@@ -70,7 +71,7 @@
         <div class=container>
             <div class=row>
                 <div class="col-lg-6 ml-auto justify-content-center">
-                    <div class=image-content data-aos=fade-right><img class=img-fluid src=images/feature/feature-new-01.webp onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/feature\/feature-new-01.jpg'" alt=iphone></div>
+                    <div class=image-content width="500" height="500" data-aos=fade-right><img class=img-fluid width="500" height="500" src=images/dashboard.jpg onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/feature\/feature-new-01.jpg'" alt=iphone></div>
                 </div>
                 <div class="col-lg-6 mr-auto align-self-center">
                     <div class=feature-content>
@@ -129,7 +130,7 @@
             </div>
             <div class="row no-gutters">
                 <div class="col-lg-6 align-self-center">
-                    <div class="service-thumb left" data-aos=fade-right><img class=img-fluid src=images/feature/iphone-ipad.webp onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/feature\/iphone-ipad.jpg'" alt=iphone-ipad></div>
+                    <div class="service-thumb left" data-aos=fade-right><img class=img-fluid src=images/dashboard_2.jpg onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/feature\/iphone-ipad.jpg'" alt=iphone-ipad></div>
                 </div>
                 <div class="col-lg-5 mr-auto align-self-center">
                     <div class=service-box>
