milestones e integração da tabela time spent do google drive

--- a/microsite/faq/index.html
+++ b/microsite/faq/index.html
@@ -47,7 +47,13 @@
                                 <a class=dropdown-item href=../architecture/architecture.html>Architecture</a>
                                 <a class=dropdown-item href=logbook.html>LogBook</a>
                                 <a class=dropdown-item href=../architecture/usermanual.pdf>User Manual</a>
-</div>
+                            </div>
+                        </li>
+                                                <li class="nav-item dropdown dropdown-slide"><a class=nav-link href=# data-toggle=dropdown>Milestones
+    <span><i class=tf-ion-ios-arrow-down></i></span></a>
+                        <div class=dropdown-menu>
+                            <a class=dropdown-item href=../milestones/m1.pdf>M1</a>
+                        </div>
                         </li>
                     </ul>
                 </div>
