--- a/microsite/architecture/architecture.html
+++ b/microsite/architecture/architecture.html
@@ -49,6 +49,12 @@
                             <a class=dropdown-item href=usermanual.pdf>User Manual</a>
                         </div>
                         </li>
+                                                <li class="nav-item dropdown dropdown-slide"><a class=nav-link href=# data-toggle=dropdown>Milestones
+    <span><i class=tf-ion-ios-arrow-down></i></span></a>
+                        <div class=dropdown-menu>
+                            <a class=dropdown-item href=../milestones/m1.pdf>M1</a>
+                        </div>
+                        </li>
                     </ul>
                 </div>
             </div>
