--- a/microsite/index.html
+++ b/microsite/index.html
@@ -82,10 +82,8 @@
                 <div class="col-lg-6 mr-auto align-self-center">
                     <div class=feature-content>
                         <h2>Discover Environment</h2>
-                        <p class=desc>CityZoom is a platform that aims at sharing information on environmental aspects about cities with everyone.
-                            You can learn about your city's temperature and quality of atmosphere, know if the city is becoming more eco-friendly
-                            and even compare it with others!
-                        </p>
+                        <p class=desc>CityZoom is a platform that allows users to have access to the environmental aspects of a city.
+                            Information such as a city's temperature, humidity, CO2 levels, UV radiation and more are available to the user who can also compare these aspects between different cities.                        </p>
                     </div>
                     <!--
                     <div class=testimonial>
@@ -130,7 +128,7 @@
                 <div class=col-lg-12>
                     <div class=section-title>
                         <h2>Know Your City</h2>
-                        <p>Know everything you need to know about your city with us.</p>
+                        <p>Know everything you need to know about your city with CityZoom.</p>
                     </div>
                 </div>
             </div>
@@ -143,26 +141,26 @@
                         <div class="row align-items-center">
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-ribbon></i>
-                                    <h3>Simple monitoring</h3>
-                                    <p>Use our dashboard to quickly get filled in on everything you need to know about your city's well being!</p>
+                                    <h3>Simple Monitoring</h3>
+                                    <p>Use our dashboard to quickly get you up to speed on everything you need to know about your city's well being!</p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-puzzle></i>
-                                    <h3>Sensor Mobility</h3>
-                                    <p>Know not only how your city is doing but also others and compare them!</p>
+                                    <h3>Data Sharing</h3>
+                                    <p>Compare the environmental aspects between different cities!</p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-bargraph></i>
-                                    <h3>Environmental control</h3>
-                                    <p>Check how eco-friendly your city really is and how much that may be having an impact in your life!</p>
+                                    <h3>Environmental Control</h3>
+                                    <p>Check how eco-friendly your city is and how much that may be having an impact in your life!</p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-xs-12">
                                 <div class=service-item><i class=tf-adjustments></i>
-                                    <h3>Community driven</h3>
-                                    <p>Help us figure out what's happening in your city by sharing data to us and everyone else!</p>
+                                    <h3>Community Driven</h3>
+                                    <p>Help us figure out what's happening in your city by sharing data with us and everyone else!</p>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +170,18 @@
         </div>
     </section>
     
-    
+    <section class="feature section pt-0">
+        <div class=container>
+            <div class=row>
+                <div class="col-lg-6 ml-auto justify-content-center">
+                    <div class=image-content width="500" height="500"><img class=img-fluid width="500" height="500" src=images/it_logo.png onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/feature\/feature-new-01.jpg'" alt=iphone></div>
+                </div>
+                <div class="col-lg-6 ml-auto justify-content-center">
+                    <div style="padding-top:50px" class=image-content width="500" height="500"><img class=img-fluid width="500" height="500" src=images/deti_logo.png onerror="this.src='index.html\/\/demo.themefisher.com\/small-apps-hugo\/images\/feature\/feature-new-01.jpg'" alt=iphone></div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="video-promo section bg-1" style=background-image:url(images/background/promo-video-back.webp),url(http://demo.themefisher.com/small-apps-hugo/images/background/promo-video-back.jpg)>
         <div class=container>
             <div class=row>
@@ -216,21 +225,16 @@
         </div>
     </section>
     -->
+    <!--
     <section class="call-to-action-app section bg-blue">
         <div class=container>
             <div class=row>
                 <div class=col-lg-12>
                     <h2>Monitor your city</h2>
-                    <!--x
-                    <p>Download over 2 million humans .Get Small Apps free forever!
-                        <br>We say you won’t look back.</p>
-                    -->
                     <p></p>
                     <p></p>
                     <ul class=list-inline>
-                        <!--
                         <li class=list-inline-item><a href=index.html# class="btn btn-rounded-icon"><i class=tf-ion-social-apple></i>Iphone</a></li>
-                        -->
                         <li class=list-inline-item><a href=index.html# class="btn btn-rounded-icon"><i class=tf-ion-cube></i>Web App</a></li>                       
                         <li class=list-inline-item><a href=index.html# class="btn btn-rounded-icon"><i class=tf-ion-social-android></i>Android</a></li>
                     </ul>
@@ -238,6 +242,7 @@
             </div>
         </div>
     </section>
+    -->
     <footer class=footer-main>
         <div class=container>
             <div class=row>
