Added our contacts in team page

--- a/microsite/team/index.html
+++ b/microsite/team/index.html
@@ -111,6 +111,7 @@
                             </div>
                         </div>
                         <h3>André Mourato</h3>
+                        <h6>andremourato@ua.pt</h6>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -126,6 +127,7 @@
                             </div>
                         </div>
                         <h3>Gabriel Silva</h3>
+                        <h6>augustosilva@ua.pt</h6>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -141,6 +143,7 @@
                             </div>
                         </div>
                         <h3>Gonçalo Vítor</h3>
+                        <h6>gvitor@ua.pt</h6>
                     </div>
                 </div>
             </div>
@@ -162,6 +165,7 @@
                             </div>
                         </div>
                         <h3>José Paiva</h3><cite></cite>
+                        <h6>jose.paiva@ua.pt</h6>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -177,6 +181,7 @@
                             </div>
                         </div>
                         <h3>Lucas Seabra</h3><cite></cite>
+                        <h6>lucasseabra@ua.pt</h6>
                     </div>
                 </div>
                 
@@ -193,6 +198,7 @@
                             </div>
                         </div>
                         <h3>Nuno Félix</h3><cite></cite>
+                        <h6>nunomfelix@ua.pt</h6>
                     </div>
                 </div>
             </div>
