--- a/microsite/architecture/architecture.html
+++ b/microsite/architecture/architecture.html
@@ -47,6 +47,9 @@
                             <a class=dropdown-item href=architecture.html>Architecture</a>
                             <a class=dropdown-item href=../faq/logbook.html>LogBook</a>
                             <a class=dropdown-item href=usermanual.pdf>User Manual</a>
+                            <a class=dropdown-item href="../faq/developerarea.html">Developer Area</a>
+                            <a class=dropdown-item href="../faq/specification.html">Specification Area</a>
+                            <a class=dropdown-item href="../faq/testvalidation.html">Test and Validation</a>
                         </div>
                         </li>
                                                 <li class="nav-item dropdown dropdown-slide"><a class=nav-link href=# data-toggle=dropdown>Milestones
