--- a/microsite/faq/specification.html
+++ b/microsite/faq/specification.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset=utf-8>
-    <title>Architecture</title>
+    <title>Specification Area</title>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
     <meta name=description content="this is meta description">
@@ -67,7 +67,7 @@
                 <div class=row>
                     <div class="col-sm-8 m-auto">
                         <h2>Specification Area</h2>
-                        <p>In this section we'll give an update insight of what our service should be able to provide.</p>
+                        <p>In this section we'll give an updated insight of what our service should be able to provide.</p>
                     </div>
                 </div>
             </div>
