--- a/microsite/faq/testvalidation.html
+++ b/microsite/faq/testvalidation.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset=utf-8>
-    <title>Architecture</title>
+    <title>Test and Validation</title>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
     <meta name=description content="this is meta description">
