--- a/microsite/architecture/architecture.html
+++ b/microsite/architecture/architecture.html
@@ -73,7 +73,14 @@
         </section>
         <section class="faq section pt-0">
             <div class=container>
-                <div class="container" style="margin-bottom: 50px" align="middle"><img src="../images/architecture/cityzoom_architecture.png"></div>
+                <div class="container">
+                    <h3 style="font-size: 1.5rem; font-weight: 420;">For Clients</h3>
+                    <div class="container" style="margin-bottom: 50px; margin-top: 50px" align="middle"><img src="../images/architecture/client_side_cityzoom_architecture.png"></div>
+                </div> 
+                <div class="container">
+                    <h3 style="font-size: 1.5rem; font-weight: 420;">Layer Description</h3>
+                    <div class="container" style="margin-bottom: 50px; margin-top: 50px" align="middle"><img src="../images/architecture/cityzoom_architecture.png"></div>
+                </div> 
                 <div class=row>
                     <div class="col-lg-10 m-auto">
                         <div class="block shadow">
