--- a/microsite/faq/developerarea.html
+++ b/microsite/faq/developerarea.html
@@ -113,7 +113,7 @@
                                             <p>The communication between the broker and the client side is also built making use of Nodejs. 
                                                 There is another database to save clients' information, also made in MongoDB. The needed 
                                                 authentication for user actions are supported with JSON Web Tokens.</p>
-                                            <p>The website the client interacts with uses both Nuxt and Vue.js.</p>
+                                            <p>The client interacts with a website built with Nuxt.js and Vue.js.</p>
                                     </span>
                                 </div>
                             </div>
