--- a/microsite/faq/logbook.html
+++ b/microsite/faq/logbook.html
@@ -142,11 +142,60 @@
                         </div>
                         <div class=faq-item>
                             <div class=faq-item-title>
+                                <h2>Week 6</h2>
+                            </div>
+                            <div>
+                                <span>
+                                    Meeting with the course professors on the first Milestone.
+                                    An exploration on the technologies to use, specially Apache Kafka
+                                    and the Node.js kafka interface.
+                                </span>
+                            </div>
+                        </div>
+                        <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Week 7</h2>
+                            </div>
+                            <div>
+                                <span>
+                                    The group started to implement the system with eyes on the core of the 
+                                    main functionality : share data from sensors and API's in the form of
+                                    graphics at a client interface.
+                                </span>
+                            </div>
+                        </div>
+                        <div class=faq-item>
+                                <div class=faq-item-title>
+                                    <h2>Week 8</h2>
+                                </div>
+                                <div>
+                                    <span>
+                                        The group focused on continuing the work from the previous week
+                                        in order have the system demo with the core of the main functionality
+                                        working.
+                                    </span>
+                                </div>
+                        </div>
+                        <div class=faq-item>
+                                <div class=faq-item-title>
+                                    <h2>Current Global Assessment</h2>
+                                </div>
+                                <div>
+                                    <span>
+                                        <p>3/4/19</p>
+                                        For now we feel like we are making solid progress and starting to see
+                                        the core of the system get shape. We are looking forward to deploy
+                                        more sensors across the city.
+                                    </span>
+                                </div>
+                        </div>
+                        <div class=faq-item>
+                            <div class=faq-item-title>
                                 <h2>Time Spent Sheet</h2>
                             </div>
                             <div>
                                 <span>
-                                    <iframe width="800" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRU3ksuTtFrkjzTgqtPkuYOBt1NT7J-JXoGgOpl8gmw-HBZBl6T3h9wV82dz3GJuFZpEZHRoYQ6bliG/pubhtml?gid=1077352001&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                                    <iframe width="800" height="350" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRU3ksuTtFrkjzTgqtPkuYOBt1NT7J-JXoGgOpl8gmw-HBZBl6T3h9wV82dz3GJuFZpEZHRoYQ6bliG/pubhtml?gid=1077352001&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                                     <p></p>
                                 </span>
                             </div>
