update the logbook. Add vertical api

--- a/microsite/faq/logbook.html
+++ b/microsite/faq/logbook.html
@@ -177,6 +177,78 @@
                                 </div>
                         </div>
                         <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Week 9</h2>
+                            </div>
+                            <div>
+                                <span>
+                                        The group after the presentation focused on preparing MVP documentation.
+                                </span>
+                            </div>
+                        </div>
+                        <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Week 10</h2>
+                            </div>
+                            <div>
+                                <span>
+                                        Due to Easter vacation the group decided to make a pause. 
+                                </span>
+                            </div>
+                        </div>
+                        <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Week 11</h2>
+                            </div>
+                            <div>
+                                <span>
+                                        The group was overloaded with other projects and felt the necessity to
+                                        continue the pause.
+                                </span>
+                            </div>
+                        </div>
+                        <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Week 12</h2>
+                            </div>
+                            <div>
+                                <span>
+                                        The group met with the mentors  to discuss the achievable objectives for
+                                        the next milestone. Analysis of the 'oneM2M' protocol for IoT platforms,
+                                        based on previous questions from the teachers in Milestone 3.
+                                        The group decided to design its own IoT platform and discard existing 
+                                        alternatives, since the elements of the group would greatly benefit from 
+                                        its develpment.
+                                </span>
+                            </div>
+                        </div>
+                        <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Week 13</h2>
+                            </div>
+                            <div>
+                                <span>
+                                        The group met to discuss the viability of using geojson to delimit municipalities, 
+                                        which would allow the Cityzoom platform to display the real time location of each 
+                                        device. It was decided that this concept would be developed.
+                                </span>
+                            </div>
+                        </div>
+                        <div class=faq-item>
+                            <div class=faq-item-title>
+                                <h2>Week 14</h2>
+                            </div>
+                            <div>
+                                <span>
+                                        The group implemented all the previously planned concepts.
+                                        The group also implemented the possibility for external APIs to send values from
+                                         their devices. Worked with members of the MobiWise project to have the Cityzoom 
+                                         platform receive data from their sensors.
+                                </span>
+                            </div>
+                        </div>
+
+                        <div class=faq-item>
                                 <div class=faq-item-title>
                                     <h2>Current Global Assessment</h2>
                                 </div>
