--- a/microsite/index.html
+++ b/microsite/index.html
@@ -56,6 +56,7 @@
     <span><i class=tf-ion-ios-arrow-down></i></span></a>
                         <div class=dropdown-menu>
                             <a class=dropdown-item href=milestones/m1.pdf>M1</a>
+                            <a class=dropdown-item href=milestones/m3.pdf>M3</a>
                         </div>
                         </li>
                 </ul>
