--- a/microsite/faq/specification.html
+++ b/microsite/faq/specification.html
@@ -56,6 +56,7 @@
     <span><i class=tf-ion-ios-arrow-down></i></span></a>
                         <div class=dropdown-menu>
                             <a class=dropdown-item href=../milestones/m1.pdf>M1</a>
+                            <a class=dropdown-item href=../milestones/m3.pdf>M3</a>
                         </div>
                         </li>
                     </ul>
@@ -88,6 +89,17 @@
                                          wind and waste information relative to Aveiro city.
                                     </span>
                                 </div>
+                                <div class=faq-item-title>
+                                    <h2>Second Demo Stage</h2>
+                                </div>
+                                <div>
+                                    <span>
+                                        By now, the team has been able to integrate several sources of data, which was one the team's 
+                                        big goals. We've made colaborations with both other projects from PEI course as well as external 
+                                        projects. We are working on improving our data visualization at the moment and expect to show 
+                                        results at the full demo stage.
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -104,7 +116,7 @@
                                     <li class="list-inline-item mx-3"><a class=text-white href=../index.html>Home</a></li>
                                     <li class="list-inline-item mx-3"><a class=text-white href=../team/index.html>Team</a></li>
                             </ul>
-                            <a href="../index.html"><img src=../images/logo.png alt=footer-logo width="200" height="80"></a>
+                            <a href="../index.html"><img src=../images/logo-white.png alt=footer-logo width="200" height="80"></a>
                             <ul class="social-icon list-inline">
                                 <li class=list-inline-item><a href=#><i class=tf-ion-social-facebook></i></a></li>
                                 <li class=list-inline-item><a href=#><i class=tf-ion-social-twitter></i></a></li>
