--- a/microsite/index.html
+++ b/microsite/index.html
@@ -256,7 +256,7 @@
                                 <li class="list-inline-item mx-3"><a class=text-white href=index.html>Home</a></li>
                                 <li class="list-inline-item mx-3"><a class=text-white href=team/index.html>Team</a></li>
                         </ul>
-                        <a href=index.html><img src=images/logo.png alt=footer-logo width="200" height="80"></a>
+                        <a href=index.html><img src=images/logo-white.png alt=footer-logo width="200" height="80"></a>
                         <ul class="social-icon list-inline">
                             <li class=list-inline-item><a href=#><i class=tf-ion-social-facebook></i></a></li>
                             <li class=list-inline-item><a href=#><i class=tf-ion-social-twitter></i></a></li>
